cleanup, debianize, Makefile
CMD: jtscm-autosync self

# On branch main
# Changes to be committed:
#   (use "git reset HEAD <file>..." to unstage)
#
#	new file:   .prj_mtimes
#	modified:   Makefile
#	modified:   debian.in/changelog
#	new file:   debian.in/compat
#	new file:   debian.in/copyright
#	new file:   debian.in/rules
#	modified:   debian/changelog
#	modified:   debian/copyright
#	modified:   fedora.in/ku-jtools.spec
#	modified:   fedora/ku-jtools.spec
#	new file:   install-prev/Makefile.ku1.3
#	modified:   install/Makefile
#	modified:   install/install
#	modified:   ku/history
#	new file:   ku/history.new
#
# Changes not staged for commit:
#   (use "git add/rm <file>..." to update what will be committed)
#   (use "git checkout -- <file>..." to discard changes in working directory)
#
#	deleted:    debian.in/changelog.save
#	deleted:    debian/changelog.save
#	deleted:    debian/dirs
#	deleted:    fedora.in/ku-jtools.spec.save
#	deleted:    fedora/ku-jtools.spec.save
#

--- a/install/install
+++ b/install/install
@@ -5,7 +5,7 @@
 :description	KUBiC Labs sample-package
 
 :maintainer	KUBiC Labs - Lorenzo Canovi <lorenzo@kubiclabs.com>
-:homepage	http://www.kubiclabs.com/trac-klpkgs
+:homepage	http://www.kubiclabs.com
 :copy1		maintainer: $maintainer
 :copy2		for copyright see /usr/share/doc/$TOOLKIT/copyright
 
