--- a/debian.in/changelog
+++ b/debian.in/changelog
@@ -1,7 +1,37 @@
+ku-jtools (1.1-ku21-10a) unstable; urgency=low
+
+  * jtcj
+    - new: --cd option, to force moving in the specified directory after connect
+
+  * jtdeb-port
+    - fix: replaced all backticks with $()
+    - fix: protect from spaces filenames lists (IFS mangle)
+    - mod: added --cd (current dir) in ssh jtcj invocation, to run the remote
+    	   instance in the same directory (warning, the very same, so must be
+	   present on the remote system)
+
+  * jtdeb-rebuild
+    - fix: replaced all backticks with $()
+    - fix: if workdir is a symlink, the output files will goes on the wrong
+    	   directory (.. is not the same of logical parent); now the files
+	   are moved to the right one
+    - fix: after rebuild the resulting .dsc and .change files where removed;
+    	   this behaviour is ok only in klabs environment (we don't use such
+	   files); now the script uses JTDEB_REBUILD_PURGE_EXTS environment
+	   to know what file (what extensions) purge after rebuild; WARNING,
+	   if not set the default is "dsc change", to disable you must set
+	   the env var to empty
+
+  * jtdeb-cache
+    - fix: removed bashism (== instead of =)
+    - fix: now works on temp files, overwrite target ones only on success
+
+
+ -- Lorenzo Canovi (KUBiC Labs, CH) <packager@kubiclabs.com>  Mon, 25 Oct 2021 17:05:21 +0200
+
 ku-jtools (1.1-ku21-05) unstable; urgency=low
 
   * production release ku21.05
-
 
  -- Lorenzo Canovi (KUBiC Labs, CH) <packager@kubiclabs.com>  Sat, 18 Sep 2021 13:05:34 +0200
 
