--- a/install-prev/install-functions.sh.1.5
+++ b/install-prev/install-functions.sh.1.5
@@ -1,8 +1,8 @@
 #!/bin/bash
 # install-functions.sh - common helpers for installation tasks
-# VERSION 1.3
+# VERSION 1.5
 #
-# (c) 2011-2012 Lorenzo Canovi <lorenzo.canovi@kubiclabs.com>
+# (c) 2011-2013 Lorenzo Canovi <lorenzo.canovi@kubiclabs.com>
 # released under GPL v.2
 
 # global placeholders
@@ -224,7 +224,7 @@ create_dir()
 	#
 	if [ "`which jtmkpath`" != "" ]
 	then
-		jtmkpath -v $fixperms $path $user $mode root:root 0775 || return $?
+		jtmkpath -v $fixperms $path $user $mode || return $?
 		jtmkpath --fixperms $path $user $mode || return $?
 	else
 		[ -d "$path" ] || {
@@ -390,15 +390,25 @@ install_files()
 make_control_files()
 {
 	local distro=
+	local mode=
+
+	[ -f ku/history -a "`which jtchangelog-build`" != "" ] && jtchangelog-build
 
 	for distro in debian fedora
 	do
 		if [ -d $distro.in ]
 		then
 			echo "pre-processing $distro control files ..." >&2
-			for file in `ls $distro.in`
+			for file in `ls $distro.in | grep -v '\.in$'`
 			do
-				installfile "$distro.in/$file" $distro/ $LOGNAME || {
+				if [ -x "$distro.in/$file" ]
+				then
+					mode=775
+				else
+					mode=664
+				fi
+
+				installfile "$distro.in/$file" $distro/ $LOGNAME $mode || {
 					rm -f $tempinstall
 					exit $?
 				}
