--- a/install-prev/install.sh.1.4
+++ b/install-prev/install.sh.1.4
@@ -1,13 +1,8 @@
 #!/bin/bash
 #
-# VERSION 1.5 (2021-10-26)
-#
-# BETTER TO NOT MODIFY THIS FILE, USE custinstall.sh INSTEAD
-#
-#
-# (c) 2011-2021 Lorenzo Canovi <lorenzo.canovi@kubiclabs.com>
-# for copyright see /usr/share/doc/jtools/copyright
-#
+# KUBiC Labs package install file
+# based on template 1.4 (2012/10)
+
 set -e
 
 . ku/install-functions.sh
@@ -28,5 +23,7 @@ install_files
 	echo -e "\nsourcing custom install script: ku/custinstall.sh\n"
 	. ku/custinstall.sh
 }
+
+# add custom tasks here (better use custinstall.sh)
 
 exit 0
