--- a/ku/install
+++ b/ku/install
@@ -1,7 +1,7 @@
 :TOOLKIT	jtools
 :VERSION	1.1
-:RELEASE	ku21.10b
-:SIGNATURE	${VERSION}-${RELEASE} (2021-10-26)
+:RELEASE	ku23.08a
+:SIGNATURE	${VERSION}-${RELEASE} (2023-08-28)
 :description	KUBiC Labs Projects Management Tools
 
 :maintainer	Lorenzo Canovi (KUBiC Labs, CH) <packager@kubiclabs.com>
